--- a/about.qmd
+++ b/about.qmd
@@ -1,9 +1,11 @@
 ---
-title: "About"
+
 ---
 
-About this site
+\-\--
+title: "About"
+\-\--
 
-```{r}
-1 + 1
-```
+![](images/Spatialilengt.png){width="321"}
+
+This project is submitted to the Singapore Management University in partial fulfilment of the requirements for the degree of Bachelor of Science (Information Systems) Smart-City Management and Technology major.
