--- a/studyarea.qmd
+++ b/studyarea.qmd
@@ -1,3 +1,7 @@
 ---
 title: "Study Area"
 ---
+
+![ Study Area](images/mapp.png)
+
+![ Landslides Inventory of Study Area](images/mapp_landslide.png)
