added content for study area

--- a/studyarea.qmd
+++ b/studyarea.qmd
@@ -20,4 +20,4 @@ Nestled between Switzerland and the Lombard plain, the valley's geographical set
 
 -   **Densely Populated:** Despite its rugged terrain, the Valtellina Valley boasts a thriving population, with numerous villages and towns nestled along its slopes and valley floor. This proximity to potential landslides heightens the vulnerability of people and infrastructure.
 
-    ![Landslides Inventory of Study Area](images/mapp_landslide.png)
+![Landslides Inventory of Study Area](images/mapp_landslide.png){alt="Landslides Inventory of Study Area"}
