--- a/studyarea.qmd
+++ b/studyarea.qmd
@@ -22,6 +22,8 @@ Nestled between Switzerland and the Lombard plain, the valley's geographical set
 
 ![Landslides Inventory of Study Area](images/mapp_landslide.png)
 
+![Elevation Map of Study Area](images/elevation map.png)
+
 ![Hillshade Analysis of Study Area](images/hillshade.png){fig-align="center"}
 
 ![Slope Analysis of Study Area](images/slope.png)
