--- a/index.qmd
+++ b/index.qmd
@@ -2,8 +2,8 @@
 title: "What Causes Landslides? Explanatory Landslide Susceptibility Modelling of Valtellina Valley, Lombardy Region, Italy"
 ---
 
-![](images/landslides (4).png)
- 
+![](images/landslides%20(4).png)
+
 ::: {style="color: #603494;"}
 #### **Abstract** {style="color: #603494;"}
 :::
