updated study area

--- a/studyarea.qmd
+++ b/studyarea.qmd
@@ -18,7 +18,7 @@ Nestled between Switzerland and the Lombard plain, the valley's geographical set
 
 -   **Alpine Setting:** Situated within the collision zone of the European and African plates, the Valtellina Valley experiences ongoing tectonic activity, leading to steep slopes, unstable rock formations, and frequent seismic tremors.
 
--   **Glacial Legacy:** Past glacial activity sculpted the valley's topography, resulting in U-shaped valleys, hanging valleys, and oversteepened slopes, all contributing to potential landslide initiation zones.
+-   **Glacial Legacy:** Past glacial activity sculpted the valley's topography, resulting in U-shaped valleys, hanging valleys, and over-steepened slopes, all contributing to potential landslide initiation zones.
 
 -   **Hydrological Regimen:** The Adda River, fed by abundant alpine meltwater and subject to intense seasonal precipitation, carves into the valley floor, further weakening slopes and contributing to soil saturation, a key trigger for landslides.
 
