--- a/project.qmd
+++ b/project.qmd
@@ -17,7 +17,7 @@ output:
 ---
 
 ## Set Up {style="color: #603494;"}
-```{r, code_folding=FALSE,warning=FALSE}
+```{r, code_folding=FALSE, results='hide', warning=FALSE}
 library(sp)
 library(raster) 
 library(elevatr)
