--- a/project.qmd
+++ b/project.qmd
@@ -55,7 +55,11 @@ ggplot(data = valtellina) +
                                         linewidth = 0.5),
         panel.grid.minor = element_blank(),
         panel.background = element_rect(fill=NA,color = 'black'),
-        panel.ontop = TRUE)
+        panel.ontop = TRUE,
+        axis.title.x = element_text(size = 12), 
+        axis.title.y = element_text(size = 12),
+        axis.text.x = element_text(size = 10),
+        axis.text.y = element_text(size = 10))
 ```
 
 ## Fixing CRS References {style="color: #603494;"}
