--- a/project.qmd
+++ b/project.qmd
@@ -73,7 +73,8 @@ precipitation <-raster("data/raster/avgprecipitation_mm.tif")
 elevation <-raster("data/raster/elevation_m.tiff")
 twi <-raster("data/raster/twi_.tif")
 lithology <- read_sf(dsn = "./data/vector", layer = "lithology_cat")
-
+profile_c <- raster("data/raster/profile_curvature_cat.tif")
+plan_c <- raster("data/raster/plan_curvature_cat.tif")
 ```
 
 ::: {style="color: #603494;"}
@@ -128,6 +129,8 @@ tail(precipitation_df)
 elevation_df <- as.data.frame(elevation,xy=TRUE)%>%drop_na()
 twi_df <- as.data.frame(twi,xy=TRUE)%>%drop_na()
 lithology_df <- as.data.frame(lithology,xy=TRUE)%>%drop_na()
+profile_c_df <- as.data.frame(profile_c,xy=TRUE)%>%drop_na()
+plan_c_df <- as.data.frame(plan_c,xy=TRUE)%>%drop_na()
 ```
 
 ::: {style="color: #603494;"}
@@ -211,8 +214,7 @@ ggplot()+
 Lithology
 ```{r}
 
-profile_names <- as.vector( lithology_df$code )
-profile_colors <-c("#9cecfb","#fff204","#eed2c4","#ed6f05","#0d07e8",
+litho_colors <-c("#9cecfb","#fff204","#eed2c4","#ed6f05","#0d07e8",
                    "#ee138d","#fe0902","#1bd7ff","#f582af","#c0e36c",
                    "#712dfe","#4ccea0","#fffeba")
 
@@ -221,12 +223,88 @@ profile_colors <-c("#9cecfb","#fff204","#eed2c4","#ed6f05","#0d07e8",
 ggplot()+
   geom_sf(aes(fill=code),color='transparent',data=lithology)+
   scale_fill_manual(name = "lithology class",
-                    values = profile_colors,
+                    values = litho_colors,
                     na.translate = FALSE)+
   coord_sf(expand=FALSE)+
   labs(title="Lithology Classification Map",
        subtitle='Valtellina Valley, Italy',
        caption=c('Source: Bucci et a., (2021)'))+
+  cowplot::theme_cowplot()+
+  theme(panel.grid.major = element_line(color = gray(.5),
+                                        linetype = 'dashed',
+                                        linewidth = 0.1),
+        panel.grid.minor = element_blank(),
+        panel.background = element_rect(fill=NA,color = 'black'),
+        panel.ontop = FALSE,
+        axis.title.x = element_text(size = 10), 
+        axis.title.y = element_text(size = 10),
+        axis.text.x = element_text(size = 8),
+        axis.text.y = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        legend.text = element_text(size = 10))
+
+```
+
+
+## 7.0 Reclassify Raster data
+
+```{r, code_folding=FALSE, results='hide', message=FALSE, warning=FALSE}
+reclass_df <- c(-Inf, -0.0001, 1,
+                -0.0001, 0.0001, 2,
+                0.0001, Inf, 3)
+reclass_df
+reclass_m <- matrix(reclass_df,ncol = 3,byrow = TRUE)
+
+profile_classifed <- reclassify(profile_c,reclass_m)
+profile_classifed_df <- as.data.frame(profile_classifed,xy=TRUE)%>%drop_na()
+profile_codes <- unique(profile_classifed_df["profile_curvature_cat"])
+profile_names <-c("convex", "flat", "concave")
+profile_colors <-c("#4884c1","#7f6a8a","#ae3a4e")
+
+plan_classifed <- reclassify(plan_c,reclass_m)
+plan_classifed_df <- as.data.frame(plan_classifed,xy=TRUE)%>%drop_na()
+plan_codes <- unique(plan_classifed_df["plan_curvature_cat"])
+plan_names <-c("concave", "flat", "convex")
+plan_colors <-c("#d665b0","#a4afd5","#00c8cd")
+
+ggplot(data=profile_classifed_df)+
+  geom_raster(aes(x=x,y=y,fill=as.character(profile_curvature_cat)))+
+  geom_sf(fill='transparent',data=valtellina)+
+  scale_fill_manual(name = "curvature type",
+                    values = profile_colors,
+                    labels = profile_names,
+                    na.translate = FALSE)+
+  coord_sf(expand=FALSE)+
+  labs(x='Longitude',y='Latitude',
+       title="Profile Curvature Classification Map",
+       subtitle='Valtellina Valley, Italy',
+       caption='Source: Shuttle Radar Topography Mission') +
+  cowplot::theme_cowplot()+
+  theme(panel.grid.major = element_line(color = gray(.5),
+                                        linetype = 'dashed',
+                                        linewidth = 0.1),
+        panel.grid.minor = element_blank(),
+        panel.background = element_rect(fill=NA,color = 'black'),
+        panel.ontop = FALSE,
+        axis.title.x = element_text(size = 10), 
+        axis.title.y = element_text(size = 10),
+        axis.text.x = element_text(size = 8),
+        axis.text.y = element_text(size = 8),
+        legend.title = element_text(size = 10),
+        legend.text = element_text(size = 10))
+
+ggplot(data=plan_classifed_df)+
+  geom_raster(aes(x=x,y=y,fill=as.character(plan_curvature_cat)))+
+  geom_sf(fill='transparent',data=valtellina)+
+  scale_fill_manual(name = "curvature type",
+                    values = plan_colors,
+                    labels = plan_names,
+                    na.translate = FALSE)+
+  coord_sf(expand=FALSE)+
+  labs(x='Longitude',y='Latitude',
+       title="Plan Curvature Classification Map",
+       subtitle='Valtellina Valley, Italy',
+       caption='Source: Shuttle Radar Topography Mission') +
   cowplot::theme_cowplot()+
   theme(panel.grid.major = element_line(color = gray(.5),
                                         linetype = 'dashed',
